test/type.test.js
/**
 * Created by limx on 17-1-10.
 */
var obj = {
    num: 1
};
console.log(typeof obj.num);
console.log(obj.d);
console.log(typeof obj.d);
// console.log(a); //error
console.log(typeof a);
if ("undefined" == typeof a) {
    console.log("typeof a is undefined");
}
if ("undefined" == typeof obj.d) {
    console.log("typeof obj.d is undefined");
}
console.log(typeof null);
